# AssetForgeMCP

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.infra.yml  docker-compose.yml  pyproject.toml
src/asset_forge_mcp/: __init__.py  config.py  files.py  logging_config.py  models.py  openai_client.py  prompts.py  s3_client.py  server.py  tools.py
tests/: conftest.py  test_config.py  test_file_io.py  test_filename_sanitization.py  test_openai_client.py  test_prompt_builder.py  test_s3_client.py  test_tool_responses.py  test_tool_validation.py
